2429 [Update] version/date information will be shown also for disabled packages
2428 [Update] disabled packages are not hidden anymore
2427 [Update] hide x264 10bit completly if disabled (regression of 2395)
2426 [x265] added option to enable/disable x265 in the MeGUI settings (disabled by default)
2425 [Queue] fixed crash if more than one worker is opening an avs script
2424 [x265] fixed default encoding mode part II
2423 [x265] fixed default encoding mode
2422 [x265] added basic x265 encoding support
2421 [Log] do not log progress messages from the FFMpeg encoder
2420 delete devil.dll in the MeGUI root folder if avisynth.dll is not available also
2419 [Update] added possibility to use display names for the update files
              added possibility to use .NET requirements for the update files
              improved error handling and log output

Changelog 2356 --> 2418

Features/Changes:
[x264] added 10 bit encoding support. This must be enabled through the MeGUI settings if you want to use it.
[x264] disabled direct mp4 output as the official builds do not have this support enabled anymore.
[x264] therefore introduced external muxer job feature for the x264 encoder (only MKV & MP4). Can be changed through the MeGUI settings.
[x264] forced to use external mp4 muxer in any case

Enhancements/Fixes:
[Aften] do not log progress messages
[Audio Encoder] added 32000 Hz as Sample Rate. Feature Request #518
[Audio Encoder] added TimeStretch support. Feature Request #493
[AviSynth] only load portable DirectShowSource.dll if portable mode is used
[AVS Script Creator] + [OneClick] aligned resolution calculation of both tools
[AVS Script Creator] changed default mod value to 8
[AVS Script Creator] fixed a crash when opening first a smaller (width/height) and then a bigger input file
[Chapter Creator] automatically preselect chapter file name
[Log] changed format of some date/times
[Log] improved avs log information